# TIC

./: .gitignore  AGENTS.md  AI.md  CONTRIBUTING.md  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
docs/: F0_design_decisions.md  F0_roadmap.md  backlog.md  features.md  general.md  geopolitical.md  roadmap_template.md  save_entity_graph.html
docs/design/: architecture.md  coding_conventions.md  python_conventions.md
docs/sessions/: roadmap_template.md  session_template.md  sessions_index.md
docs/terra_invicta/: save.schema.json
scripts/: _common.py  check_doc.py  check_format.py  check_types.py  ci.py  extract_gamestates.py  extract_save_types.py  fix.py  format.py  format_doc.py  install.py  lint.py  mutate.py  test.py
scripts/danger_zone/: execute_commands.py
scripts/hooks/: pre-commit
tests/: __init__.py  test_extract_gamestates.py  test_framework_dependency.py
tests/campaign/: __init__.py  test_campaign_repository.py  test_filesystem_save_loader.py  test_import_save.py  test_save_parser.py
tests/campaign/application/: __init__.py  test_import_save_handler.py
tests/campaign/domain/: __init__.py  test_campaign.py  test_save_imported.py
tests/shared/: __init__.py  test_in_memory_message_bus.py  test_sqlite_event_store.py
tic/: cli.py
tic/campaign/: __init__.py
tic/campaign/application/: __init__.py  import_save.py  save_file_data.py  save_file_reader.py  save_loader.py
tic/campaign/domain/: __init__.py  campaign.py  campaign_repository.py  parsed_save.py
tic/campaign/domain/events/: __init__.py  campaign_created.py  save_imported.py
tic/campaign/infrastructure/: filesystem_save_loader.py  sqlite_campaign_repository.py
tic/campaign/interface/cli/: __init__.py  import_save.py
tic/game_state/: __init__.py
tic/reporting/: __init__.py
tic/shared/: __init__.py
tic/shared/domain/: __init__.py  event_store.py  message_bus.py
tic/shared/infrastructure/: __init__.py  in_memory_message_bus.py  sqlite_event_store.py  sqlite_schema.py
