[project]
name = "tic"
version = "0.1.0"
description = "Terra Invicta Companion — data visualisation and historical trends"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "typer",
    "watchdog",
    "jinja2",
    "httpx",       # for testing FastAPI
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov",
]

[project.scripts]
tic-cli = "tic.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tic --cov-report=term-missing"

[tool.coverage.report]
show_missing = true
omit = ["tests/*"]
