[project]
name = "tic"
version = "0.1.0"
description = "Terra Invicta Companion — data visualisation and historical trends"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "typer",
    "watchdog",
    "jinja2",
    "httpx",       # for testing FastAPI
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
tic-cli = "tic.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tic --cov-report=term-missing"

[tool.coverage.report]
show_missing = true
omit = ["tests/*"]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = ["E501"]  # line-length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["tic"]
